# Velo_Bilheran

./: CMakeLists.txt  main.cpp  navigationcontrols.cpp  object.cpp  object.h  pointlight.cpp  pointlight.h  readme.md  spotlight.cpp  spotlight.h
shaders/: SimpleFragmentShader.fragmentshader  SimpleVertexShader.vertexshader
